add html markup for the hearder of the social media dashboard

--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/globals/_variables.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/globals/_variables.scss
@@ -28,4 +28,6 @@
   --white-card-bg: hsl(227, 47%, 96%);
   --white-grayish-text: hsl(228, 12%, 44%);
   --white-dark-text: hsl(230, 17%, 14%);
+
+  --font-inter: "Inter", sans-serif;
 }
