--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/utils/_functions.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/utils/_functions.scss
@@ -2,7 +2,7 @@
 
 @function rem($pixel) {
   @if math.is-unitless($pixel) {
-    @return math.dev($pixel, 16) + rem;
+    @return math.div($pixel, 16) + rem;
   } @else {
     @error "Don't use a unit when using the rem function!";
   }
@@ -10,7 +10,7 @@
 
 @function em($pixel) {
   @if math.is-unitless($pixel) {
-    @return math.dev($pixel, 16) + em;
+    @return math.div($pixel, 16) + em;
   } @else {
     @error "Don't use a unit when using the em function for media queries!";
   }
