--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/globals/_typography.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/globals/_typography.scss
@@ -1,7 +1,12 @@
+@use "../utils/" as u;
 h1,
 h2,
 h3 {
   margin-top: 0;
+}
+
+h1 {
+  font-size: clamp(u.rem(24), u.rem(16) + 2vw, u.rem(28));
 }
 
 a,
