--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/globals/_boilerplate.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/globals/_boilerplate.scss
@@ -13,6 +13,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: var(--font-inter);
+  font-weight: 400;
   background: var(--dark-bg);
   color: var(--dark-white-text);
 }
