--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/layout/_flexbox.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/layout/_flexbox.scss
@@ -1,7 +1,7 @@
 @use "../utils/" as u;
 
 .header {
-  @include u.breakpoints-up(large) {
+  @include u.breakpoints-up(medium) {
     display: flex;
     justify-content: space-between;
   }
