--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/globals/_variables.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/globals/_variables.scss
@@ -13,7 +13,7 @@
   --toggle-bg-end: hsl(146, 68%, 55%);
 
   /*light theme*/
-  toggle: hsl(230, 22%, 74%);
+  --light-toggle: hsl(230, 22%, 74%);
 
   /*dark theme */
   --dark-bg: hsl(230, 17%, 14%);
