--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/components/_header.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/components/_header.scss
@@ -1,5 +1,13 @@
+@use "../utils/" as u;
 .header {
+  margin-top: u.rem(36);
+
   &__tittle {
+    &__total-followers {
+      font-size: u.rem(14);
+      font-weight: 700;
+      color: var(--dark-blue-text);
+    }
   }
 }
 
@@ -7,14 +15,57 @@
   border: none;
 
   label {
+    cursor: pointer;
   }
   &__container {
+    position: relative;
+    height: u.rem(24);
+
     input[type="radio"] {
+      margin: 0;
+      margin-inline: u.rem(-2);
+      opacity: 0;
+      width: u.rem(20);
+      height: u.rem(24);
+      cursor: pointer;
     }
+
     &__bg {
+      display: block;
+      height: 100%;
+      position: absolute;
+      width: 100%;
+      top: 0;
+      border-radius: u.rem(12);
+      background: linear-gradient(
+        225deg,
+        var(--toggle-bg-end) 0%,
+        var(--toggle-bg-start) 98.02%
+      );
+      pointer-events: none;
     }
 
     &__btn {
+      position: absolute;
+      left: u.rem(3);
+      top: u.rem(3);
+      right: 100%;
+      width: u.rem(18);
+      height: u.rem(18);
+      border-radius: 50%;
+      background-color: var(--dark-bg);
+      transition: all 150ms ease-in-out;
+    }
+
+    #light:checked ~ .toggle__container__btn {
+      left: calc(100% - u.rem(21));
+      right: u.rem(3);
+    }
+
+    #os:checked ~ .toggle__container__btn {
+      left: 50%;
+      right: auto;
+      transform: translate(-50%);
     }
   }
 }
