change the fieldset display property to flexbox and revert back to two toggle instead of three like the design

--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/layout/_flexbox.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/layout/_flexbox.scss
@@ -7,3 +7,14 @@
     align-items: center;
   }
 }
+
+.toggle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+
+  @include u.breakpoints-up(medium) {
+    gap: u.rem(12);
+  }
+}
