--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/components/_header.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/components/_header.scss
@@ -17,9 +17,13 @@
   label {
     cursor: pointer;
   }
+  label[for="light"] {
+    display: none;
+  }
   &__container {
     position: relative;
     height: u.rem(24);
+    width: u.rem(48); //new style
 
     input[type="radio"] {
       margin: 0;
@@ -28,6 +32,10 @@
       width: u.rem(20);
       height: u.rem(24);
       cursor: pointer;
+
+      &:focus ~ .toggle__container__btn {
+        border: 2px solid var(--white-bg-top);
+      }
     }
 
     &__bg {
@@ -41,7 +49,8 @@
         225deg,
         var(--toggle-bg-end) 0%,
         var(--toggle-bg-start) 98.02%
-      );
+      ); //dark theme
+      //background: var(--light-toggle);//light theme
       pointer-events: none;
     }
 
@@ -53,7 +62,8 @@
       width: u.rem(18);
       height: u.rem(18);
       border-radius: 50%;
-      background-color: var(--dark-bg);
+      background-color: var(--dark-bg); //dark theme
+      //background-color: var(--white-bg);//light theme
       transition: all 150ms ease-in-out;
     }
 
@@ -61,11 +71,11 @@
       left: calc(100% - u.rem(21));
       right: u.rem(3);
     }
-
+    /*
     #os:checked ~ .toggle__container__btn {
       left: 50%;
       right: auto;
       transform: translate(-50%);
-    }
+    } */
   }
 }
