--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/components/_card.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/components/_card.scss
@@ -1,36 +1,37 @@
 @use "../utils/" as u;
 
 .card {
-  //color: var(--dark-blue-text);
-  border-top: u.rem(3) solid;
   text-align: center;
+  //width: u.rem(255); //temp
+  //height: u.rem(216); //Temp
+  padding: u.rem(25) 0 u.rem(25);
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: u.rem(16);
-  padding: u.rem(12);
+  border-top: u.rem(4) solid;
+
   &__social {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: u.rem(7);
+    gap: u.rem(8);
 
-    &--username {
+    margin-bottom: u.rem(20);
+    &--username p {
       font-size: u.rem(12);
+      font-weight: 700;
     }
   }
 
   &__data {
+    margin-bottom: u.rem(25);
     h3 {
-      font-size: u.rem(40);
-      font-weight: 700;
+      font-size: u.rem(56);
+      letter-spacing: u.rem(-2);
+      margin-bottom: u.rem(2);
     }
     p {
-      font-size: u.rem(11);
+      font-size: u.rem(12);
       text-transform: uppercase;
-      letter-spacing: u.rem(3);
+      letter-spacing: u.rem(5);
     }
   }
 
@@ -44,17 +45,30 @@
   &__facebook {
     border-top-color: var(--facebook);
   }
+
   &__twitter {
     border-top-color: var(--twitter);
   }
-  /*
+
   &__instagram {
-    border-image: linear-gradient(
-      to right,
-      var(--instagram-end) 0%,
-      var(--instagram-start) 98.02%
-    );
-  }*/
+    border-top-color: var(--instagram-middle);
+    /*
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: u.rem(5);
+      background: linear-gradient(
+        225deg,
+        var(--instagram-end) 0%,
+        var(--instagram-middle) 50.91%,
+        var(--instagram-start) 100%
+      );
+    }*/
+  }
 
   &__youtube {
     border-top-color: var(--youtube);
