--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/components/_header.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/components/_header.scss
@@ -6,8 +6,10 @@
     &__total-followers {
       font-size: u.rem(14);
       font-weight: 700;
-      color: var(--dark-blue-text);
     }
+  }
+  span {
+    color: var(--small-text);
   }
 }
 
@@ -17,19 +19,21 @@
   label {
     cursor: pointer;
   }
+
   label[for="light"] {
     display: none;
   }
+
   &__container {
     position: relative;
     height: u.rem(24);
-    width: u.rem(48); //new style
+    width: u.rem(48);
 
     input[type="radio"] {
       margin: 0;
       margin-inline: u.rem(-2);
       opacity: 0;
-      width: u.rem(20);
+      width: u.rem(24);
       height: u.rem(24);
       cursor: pointer;
 
@@ -45,12 +49,7 @@
       width: 100%;
       top: 0;
       border-radius: u.rem(12);
-      background: linear-gradient(
-        225deg,
-        var(--toggle-bg-end) 0%,
-        var(--toggle-bg-start) 98.02%
-      ); //dark theme
-      //background: var(--light-toggle);//light theme
+      background: var(--toggle-bg);
       pointer-events: none;
     }
 
@@ -62,20 +61,13 @@
       width: u.rem(18);
       height: u.rem(18);
       border-radius: 50%;
-      background-color: var(--dark-bg); //dark theme
-      //background-color: var(--white-bg);//light theme
-      transition: all 150ms ease-in-out;
+      background-color: var(--toggle-btn);
+      transition: all 300ms ease-in-out;
     }
 
     #light:checked ~ .toggle__container__btn {
       left: calc(100% - u.rem(21));
       right: u.rem(3);
     }
-    /*
-    #os:checked ~ .toggle__container__btn {
-      left: 50%;
-      right: auto;
-      transform: translate(-50%);
-    } */
   }
 }
