--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/globals/_boilerplate.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/globals/_boilerplate.scss
@@ -14,6 +14,43 @@ body {
   padding: 0;
   font-family: var(--font-inter);
   font-weight: 400;
-  background: var(--dark-bg);
-  color: var(--dark-white-text);
+  background: var(--background);
+  color: var(--text-color);
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+body.light {
+  --background: var(--white-bg);
+  --text-color: var(--white-dark-text);
+  --small-text: var(--white-grayish-text);
+  --card-bg: var(--white-card-bg);
+  --card-text-color: var(--white-dark-text);
+  --toggle: var(--light-toggle);
+  --toggle-bg: var(--light-toggle-bg);
+  --toggle-btn: var(--light-toggle-btn);
+}
+
+body.dark {
+  --background: var(--dark-bg);
+  --text-color: var(--dark-white-text);
+  --card-bg: var(--dark-card-bg);
+  --small-text: var(--dark-blue-text);
+  --card-text-color: var(--dark-white-text);
+  //--card-hover
+  //total-follower-text-color
+  --toggle: var(--dark-white-text);
+  --toggle-bg: linear-gradient(
+    225deg,
+    var(--toggle-bg-end) 0%,
+    var(--toggle-bg-start) 98.02%
+  );
+  --toggle-btn: var(-dark-bg);
 }
