--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/layout/_grid.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/layout/_grid.scss
@@ -1,73 +1,12 @@
 @use "../utils/" as u;
 
-/*** not in use right now*****
-.toggle {
-  display: grid;
-  grid-template-columns: 1fr u.rem(60) 1fr;
-  grid-template-rows: repeat(2, 1fr);
-  gap: u.rem(12);
-
-  label {
-    &[for="dark"] {
-      grid-column: 1 / 2;
-      justify-self: end;
-    }
-    &[for="light"] {
-      grid-column: 3 / 4;
-    }
-
-    &[for="os"] {
-      grid-column: 2 / 3;
-      grid-row: 2 / 3;
-      justify-self: center;
-    }
-  }
-  &__container {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-  }
-}
-
-/*
-toggle new try styles for grid parent
-grid-template-columns: repeat(2, 1fr);
-grid-template-rows: 1fr;
-gap: 5px;
-
-
- grid child element
- label dark
- justify-self: end;
-grid-column: 1/1;
-
-grid child element
-label light
-grid-column: 1/1;
-display: none;
-
-
-toggle__container: styles
-grid-column: 2;
-grid-row: 1/1;
-
-width: 48px;
-*/
-
 .grid {
   display: grid;
   gap: u.rem(18);
   @include u.breakpoints-up(medium) {
-    grid-template-columns: repeat(4, 1fr);
+    @include u.grid(2, 1);
   }
-}
-
-//create mixins for these
-.grid2 {
-  display: grid;
-  gap: u.rem(18);
-
-  @include u.breakpoints-up(medium) {
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+  @include u.breakpoints-up(large) {
+    @include u.grid(4, 1);
   }
 }
