global styles complete

--- a/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/components/_header.scss
+++ b/Practice Projects/social-media-dashboard-with-theme-switcher-master/app/scss/components/_header.scss
@@ -38,7 +38,7 @@
       cursor: pointer;
 
       &:focus ~ .toggle__container__btn {
-        border: 2px solid var(--white-bg-top);
+        //border: 2px solid var(--white-bg-top);
       }
     }
 
