remove overflow style property

--- a/Practice Projects/coding-bootcamp-testimonials-slider-master/scss/boilerplate/_global.scss
+++ b/Practice Projects/coding-bootcamp-testimonials-slider-master/scss/boilerplate/_global.scss
@@ -18,7 +18,7 @@ body {
   color: u.$Dark_Blue;
   background: url(../../images/pattern-curve.svg) no-repeat;
   background-position: 0% 100%;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 a:hover,
