--- a/Practice Projects/calculator-app-main/app/scss/components/_cal-header.scss
+++ b/Practice Projects/calculator-app-main/app/scss/components/_cal-header.scss
@@ -1,5 +1,7 @@
 .calculator {
-  padding: 20px;
+  //margin: 20px 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
   &__header {
     margin-bottom: 30px;
     font-size: 10px;
@@ -70,11 +72,16 @@
           transition: all 300ms ease-in-out;
         }
 
-        #theme-1:checked,
-        #theme-2:checked,
-        #theme-3:checked ~ .radio-btn {
-          left: calc(100% - 14px);
-          right: 1px;
+        input:first-of-type:checked ~ .radio-btn {
+          left: 4px;
+        }
+
+        input:nth-of-type(2):checked ~ .radio-btn {
+          left: calc((100% - 14px) / 2);
+        }
+
+        input:nth-of-type(3):checked ~ .radio-btn {
+          left: calc((100% - 14px) - 4px);
         }
       }
     }
