--- a/Practice Projects/calculator-app-main/app/scss/components/_cal-header.scss
+++ b/Practice Projects/calculator-app-main/app/scss/components/_cal-header.scss
@@ -1,11 +1,11 @@
+@use "../utils/" as u;
+
 .calculator {
-  //margin: 20px 0;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: u.rem(20);
+
   &__header {
-    margin-bottom: 30px;
-    font-size: 10px;
-    color: var(--theme-1-text-white);
+    margin-bottom: u.rem(30);
+    font-size: u.rem(10);
 
     &__label {
       display: flex;
@@ -13,7 +13,7 @@
       justify-content: flex-end;
 
       label {
-        margin-inline: 6px;
+        margin-inline: u.rem(6);
         cursor: pointer;
       }
     }
@@ -25,7 +25,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 30px;
+        gap: u.rem(30);
 
         span {
           text-transform: uppercase;
@@ -34,18 +34,18 @@
 
       p {
         margin: 0;
-        font-size: 1.4rem;
+        font-size: u.rem(32);
       }
 
       &__radio-wrapper {
         position: relative;
-        height: 15px;
-        width: 51px;
+        height: u.rem(15);
+        width: u.rem(51);
 
         input[type="radio"] {
           margin: 0;
-          width: 15px;
-          height: 15px;
+          width: u.rem(15);
+          height: u.rem(15);
           cursor: pointer;
         }
 
@@ -55,33 +55,31 @@
           position: absolute;
           width: 100%;
           top: 0;
-          background-color: var(--theme1-bg-very-dark-blue-toggle-keypad-bg);
-          border-radius: 12px;
+          border-radius: u.rem(12);
           pointer-events: none;
         }
 
         .radio-btn {
           position: absolute;
-          left: 1px;
-          top: 1px;
+          left: u.rem(1);
+          top: u.rem(1);
           right: 100%;
-          width: 13px;
-          height: 13px;
+          width: u.rem(13);
+          height: u.rem(13);
           border-radius: 50%;
-          background-color: var(--theme1-keys-red-key-bg-toggle);
           transition: all 300ms ease-in-out;
         }
 
         input:first-of-type:checked ~ .radio-btn {
-          left: 4px;
+          left: u.rem(4);
         }
 
         input:nth-of-type(2):checked ~ .radio-btn {
-          left: calc((100% - 14px) / 2);
+          left: calc((100% - u.rem(14)) / 2);
         }
 
         input:nth-of-type(3):checked ~ .radio-btn {
-          left: calc((100% - 14px) - 4px);
+          left: calc((100% - u.rem(14)) - u.rem(4));
         }
       }
     }
