--- a/Practice Projects/calculator-app-main/app/scss/components/_cal-header.scss
+++ b/Practice Projects/calculator-app-main/app/scss/components/_cal-header.scss
@@ -68,6 +68,7 @@
           height: u.rem(13);
           border-radius: 50%;
           transition: all 300ms ease-in-out;
+          cursor: pointer;
         }
 
         input:first-of-type:checked ~ .radio-btn {
