add text-align center to center the button text on small devices

--- a/Practice Projects/calculator-app-main/app/scss/components/_cal-grid.scss
+++ b/Practice Projects/calculator-app-main/app/scss/components/_cal-grid.scss
@@ -46,6 +46,7 @@
     justify-content: center;
     border-radius: u.rem(5);
     padding: u.rem(15);
+    text-align: center;
 
     @include u.breakpointsUp(medium) {
       @include u.grid-cal(4, u.rem(100), 5, u.rem(70));
@@ -70,6 +71,7 @@
       border-radius: u.rem(15);
       outline: none;
       margin: u.rem(5);
+      text-align: center;
       @include u.breakpointsUp(medium) {
         margin: u.rem(10);
       }
