--- a/Practice Projects/age-calculator-app-main/app/sass/global/_boilerplate.scss
+++ b/Practice Projects/age-calculator-app-main/app/sass/global/_boilerplate.scss
@@ -14,8 +14,9 @@ body {
 }
 
 main {
-  display: grid;
+  display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   min-height: 100vh;
+  padding-inline: 20px;
 }
