--- a/Practice Projects/age-calculator-app-main/app/scss/components/_card.scss
+++ b/Practice Projects/age-calculator-app-main/app/scss/components/_card.scss
@@ -35,6 +35,10 @@
         justify-content: flex-start;
       }
     }
+    span {
+      font-size: u.rem(10);
+      padding: u.rem(3) 0 0 u.rem(1);
+    }
   }
 
   &__output {
@@ -78,6 +82,9 @@
   flex-direction: column;
 }
 
+button {
+  border: none;
+}
 .img-wrapper {
   width: u.rem(50);
   background: var(--purple);
