--- a/Practice Projects/age-calculator-app-main/app/scss/global/_variables.scss
+++ b/Practice Projects/age-calculator-app-main/app/scss/global/_variables.scss
@@ -9,4 +9,7 @@
   --light-grey: hsl(0, 0%, 86%);
   --smokey-grey: hsl(0, 1%, 44%);
   --off-black: hsl(0, 0%, 8%);
+
+  //font-family
+  --font: "Poppins", sans-serif;
 }
