modifications to mobile and desktop styles

--- a/Practice Projects/age-calculator-app-main/app/scss/components/_card.scss
+++ b/Practice Projects/age-calculator-app-main/app/scss/components/_card.scss
@@ -28,6 +28,7 @@
     &__wrapper {
       display: flex;
       justify-content: space-between;
+      flex-wrap: wrap;
       gap: u.rem(10);
       margin-bottom: u.rem(40);
 
@@ -36,8 +37,16 @@
       }
     }
     span {
-      font-size: u.rem(10);
+      font-size: u.rem(7.656);
+      font-style: italic;
       padding: u.rem(3) 0 0 u.rem(1);
+      padding-bottom: u.rem(10);
+      opacity: 0.6;
+
+      @include u.breakpoint(medium) {
+        font-size: u.rem(10.656);
+        padding-bottom: 0;
+      }
     }
   }
 
@@ -63,17 +72,41 @@
   }
   input {
     width: u.em(85);
-    padding: u.rem(10);
+    height: u.rem(44);
+    // padding: u.rem(10);
+    padding-left: u.rem(11.6);
     border: u.rem(1.7) solid var(--light-grey);
     border-radius: u.rem(5);
+    outline: none;
     font-size: u.rem(15);
     font-weight: 800;
+    opacity: 0.8;
     cursor: pointer;
 
     @include u.breakpoint(medium) {
-      width: u.em(117.008);
-      font-size: u.rem(20);
+      width: u.em(80);
+      height: u.rem(60);
+      font-size: u.rem(22.4);
     }
+
+    @include u.breakpointSmall(small) {
+      width: u.em(96);
+    }
+    &:focus {
+      border: u.rem(1) solid var(--purple);
+    }
+  }
+
+  /* Chrome, Safari, Edge, Opera */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  input[type="number"] {
+    appearance: textfield;
   }
   label {
     font-size: u.rem(10);
@@ -99,13 +132,14 @@ button {
   border-radius: 50%;
   text-align: center;
   position: absolute;
-  top: 69%;
+  top: 78%;
   right: 50%;
   transform: translateX(50%);
   cursor: pointer;
+  z-index: 11;
 
   @include u.breakpoint(medium) {
-    right: 7%;
+    right: 5%;
   }
 
   img {
